Carausal max visibility fixes

--- a/src/Components/Carausal/Carausal.module.scss
+++ b/src/Components/Carausal/Carausal.module.scss
@@ -71,59 +71,3 @@
 .right {
   right: 1rem; 
 }
-
-.prev_Artists {
-  width: 100%;
-  height: 45rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .carouselWrapper {
-    width: 90%; /* Reduce carousel width to 90% */
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .card {
-    width: 28rem;
-    height: 30rem; 
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    // border: 4px solid $frame-color;
-    border-radius: 15px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    margin: 0 1.5rem;
-    transition: transform 0.3s ease;
-
-    &:hover {
-      transform: translateY(-5px);
-    }
-  }
-
-  .cardImage {
-    width: 100%;
-    height: 80%; 
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
-  }
-
-  .textBox {
-    width: 100%;
-    padding: 0.5rem;
-    box-sizing: border-box;
-  }
-
-  .artistName {
-    font-size: 1.2rem;
-    // color: $text-color;
-    margin: 0;
-    padding: 0.5rem;
-  }
-}
